deployment-java.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: learn
  name: java-deployment
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: java-app
  replicas: 1 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app.kubernetes.io/name: java-app
    spec:
      containers:
      - name: java
        image: arungupta/helloworld-spring-boot:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: learn
  name: java-service
spec:
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
  selector:
    app.kubernetes.io/name: java-app
