java-virtual-svc-internal.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: java-internal-virtual-svc
  namespace: learn
spec:
  hosts:
    - "javainternal.internal-some-domain.cloud"
  gateways:
    - istio-external-gateway
  http:
    - route:
        - destination:
            host: java-service
            port:
              number: 80
      match:
        - uri:
            prefix: /
